kubernetes/services/audiobookshelf/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
    type: media
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
